@@ -7,10 +7,29 @@ apply plugin: 'org.springframework.boot'
 //https://docs.spring.io/dependency-management-plugin/docs/current-SNAPSHOT/reference/html/
 //apply plugin: 'io.spring.dependency-management'
 
+// gradle打jar包，去掉外部依赖的jar 将依赖包复制到lib目录 其中$JAVA_HOME/jre/lib/ext是固定的，后面追加冒号，冒号后面跟上外部依赖jar包所在路径
+//nohup java -Djava.ext.dirs=$JAVA_HOME/jre/lib/ext:/data/middleplateform/hicon-area/lib -jar hicon-area-1.0-SNAPSHOT.jar &
+task copyJar(type: Copy) {
+    // 清除现有的lib目录
+    delete "$buildDir\\libs\\lib"
+    from configurations.runtimeClasspath
+    into "$buildDir\\libs\\lib"
+    from configurations.compileClasspath
+    into "$buildDir\\libs\\lib"
+}
+
 bootJar {
+    // 排除所有的jar
+    //excludes = ["*.jar"]
+    // lib目录的清除和复制任务
+    //dependsOn copyJar
+
     manifest {
         attributes project.tasks.jar.manifest.attributes
+        //'Class-Path': configurations.runtimeClasspath.files.collect { "lib/$it.name" }.join(' ')
     }
+
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 
     //layered {
     //    application {
